--- a/packages.config
+++ b/packages.config
@@ -10,6 +10,7 @@
   <package id="itextsharp.xmlworker" version="5.5.13.3" targetFramework="net472" />
   <package id="Microsoft.ReportingServices.ReportViewerControl.Winforms" version="150.1620.0" targetFramework="net472" />
   <package id="Microsoft.SqlServer.Types" version="14.0.314.76" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
   <package id="SixLabors.Fonts" version="1.0.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.IO" version="4.3.0" targetFramework="net472" />
